<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MenuDemo</string>
    <string name="hello_world">Hello world!</string>
    <string name="basic_menu_welcome">Welcome to basic menu activity!</string>
    <string name="dynamic_menu_welcome">Welcome to dynamic menu activity!</string>
    <string name="context_menu_welcome">Welcome to context menu activity!</string>
    <string name="menu1">Menu 1</string>
    <string name="menu2">Menu 2</string>
    <string name="menu3">Menu 3</string>
    <string name="menu4">Menu 4</string>
    <string name="action_settings">Settings</string>
    <string name="activity_close">Close</string>
    <string name="sub_menu1">Sub Menu 1</string>
    <string name="sub_menu2">Sub Menu 2</string>
    <string name="sub_menu3">Sub Menu 3</string>
    <string name="sub_menu4">Sub Menu 4</string>
    <string name="title_activity_basic_menu">BasicMenuActivity</string>
    <string name="basic_menu_button_title">Basic Menu Activity</string>
    <string name="dynamic_menu_button_title">Dynamic Menu Activity</string>
    <string name="context_menu_button_title">Context Menu Activity</string>
    <string name="context_action_bar_button_title">Context Action Bar Menu Activity</string>
    <string name="title_activity_dynamic_menu">DynamicMenuActivity</string>
    <string name="title_activity_context_menu">ContextMenuActivity</string>
    <string name="title_activity_my_shared_code">MySharedCodeActivity</string>
    <string name="title_activity_context_action_bar">ContextActionBarActivity</string>

</resources>