<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
	<item
        android:id="@+id/menu1"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu1">  
    <menu>
        <item
            android:id="@+id/sub_menu1" 
            android:title="@string/sub_menu1"
            />
       	<item
       	    android:id="@+id/sub_menu2"
            android:title="@string/sub_menu2"
            />
		<item 
		    android:id="@+id/sub_menu3"
            android:title="@string/sub_menu3"
            />
		<item 
		    android:id="@+id/sub_menu4"
            android:title="@string/sub_menu4"
            />
    </menu>
  	</item>
 	
	<item
        android:id="@+id/menu2"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/menu2"/>
		
	<item
        android:id="@+id/menu3"
        android:orderInCategory="3"
        android:showAsAction="always"
        android:title="@string/menu3"/>
			
	<item
        android:id="@+id/menu4"
        android:orderInCategory="4"
        android:showAsAction="always"
        android:title="@string/menu4"/>	
	
	<item
        android:id="@+id/close"
        android:orderInCategory="5"
        android:showAsAction="ifRoom|withText"
        android:title="@string/activity_close"/>
		
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="6"
        android:showAsAction="ifRoom|withText"
        android:title="@string/action_settings"/>

</menu>