<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

	<Button 
	    android:id="@+id/basic_menu_button"
	    android:onClick="onButtonClick"
	    android:text="@string/basic_menu_button_title"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"/>
	
	<Button 
	    android:id="@+id/context_menu_button"
	    android:onClick="onButtonClick"
	    android:text="@string/context_menu_button_title"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"/>
	
	<Button 
	    android:id="@+id/dynamic_menu_button"
	    android:onClick="onButtonClick"
	    android:text="@string/dynamic_menu_button_title"
	    android:layout_height="wrap_content"
	    android:layout_width="match_parent"/>
	

</LinearLayout >